Bug 53064 - When running weston with the wayland-backend.so backend, and you specify a socket, it doesn't create the socket
Summary: When running weston with the wayland-backend.so backend, and you specify a so...
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-02 02:11 UTC by nerdopolis1
Modified: 2012-08-14 10:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description nerdopolis1 2012-08-02 02:11:50 UTC
Hi.

When I try to run weston nested with the --backend=wayland-backend.so with the --socket=NAME it returns

[02:07:53.802] Loading module '/opt/lib/i386-linux-gnu/weston/wayland-backend.so'
[02:07:53.808] failed to create display: No such file or directory
[02:07:53.808] fatal: failed to create compositor

A suspicious line in strace:
connect(14, {sa_family=AF_FILE, path="/root/NAME"}, 13) = -1 ENOENT (No such file or directory)
Comment 1 Philipp Brüschweiler 2012-08-14 10:33:05 UTC
Fixed in 33d7509d374ae649f2684d62bbe7faa5bc42687c


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.