compositor: Set WAYLAND_DISPLAY only after creating backend

The wayland backend needs to connect to the original WAYLAND_DISPLAY
before we overwrite it.

https://bugs.freedesktop.org/show_bug.cgi?id=53064